<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        style="@style/GameButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical" >

        <cs309.a1.shared.TextView
            android:id="@+id/textView1"
            android:layout_width="416dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/player_lost"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="45sp" />

        <LinearLayout
            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal" >

            <cs309.a1.shared.Button
                android:id="@+id/Reconnect"
                style="@style/GameButtonBlack"
                android:layout_width="255dip"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:layout_marginRight="35dip"
                android:layout_marginTop="5dip"
                android:text="@string/reconnect" />

            <cs309.a1.shared.Button
                android:id="@+id/Drop"
                style="@style/GameButtonBlack"
                android:layout_width="255dip"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:layout_marginTop="5dip"
                android:text="@string/drop_player" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>